2008-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* FAQ.txt: Added a FAQ for how to extract and combine CMYK image
	channels to individual files.

2008-05-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/fx.c (ConvolveImage): Eliminate unnecessary "range check"
	feature since range checking is not where the CPU time is going.
	* magick/effect.c (UnsharpMaskImage): Re-write implementation to
	use pixel iterators.
	* magick/pixel_iterator.c: Decided that the old per-pixel
	iterations were not useful enough to keep since the region-based
	ones are working fine.  Moved pixel_row_iterator.c to
	pixel_iterator.c and renamed functions to remove the 'Row'
	designation.
	* magick/composite.c (CompositeImage): Automatically adjust
	colorspace of composite image so that it is compatible with canvas
	image.
	* magick/alpha_composite.h (AlphaComposite): Fix alpha composite
	when both pixels contain transparency.
	* PerlMagick/demo/demo.pl: Use segmentation parameters which
	are more suitable for our image.

2008-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (CompositeImage): CMYK copy composition
	operators automatically set the image colorspace to CMYK.
	* coders/tiff.c (WriteTIFFImage): CMYK must take precedence over
	JPEG compression.  We don't support JPEG compression in TIFF with
	CMYK.

2008-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ChannelThresholdImage): Re-implement using
	pixel iterators.  Support thresholding only the red channel by
	eliminating the switch to intensity thresholding if only one
	channel parameter is supplied.
	* coders/tiff.c (WriteTIFFImage): Don't accidentially convert CMYK
	images to RGB.
	* magick/composite.c (CompositePixels): Handle CopyBlack properly
	for CMYK images.
	* magick/command.c (CompositeImageCommand):  Support CopyCyan,
	CopyMagenta, CopyYellow, and CopyBlack.
	* magick/composite.c (CompositeImage): Preserve the canvas image
	colorspace.