@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-05-29  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/pdf.c (ReadPDFImage): Properly deal with reading rotated
+        PDFs.
+
+</UL>
+<p>
 2008-05-28  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
