@@ -1,3 +1,8 @@
+2008-05-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/pdf.c (ReadPDFImage): Properly deal with reading rotated
+	PDFs.
+
 2008-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* FAQ.txt: Added a FAQ for how to extract and combine CMYK image
